ALIEN-2446 fixed i glitch: Scripts names are truncated on archive browsing view

--- a/alien4cloud-ui/src/main/webapp/styles/tree-control.scss
+++ b/alien4cloud-ui/src/main/webapp/styles/tree-control.scss
@@ -30,6 +30,7 @@ treecontrol li {
     position: relative;
     padding: 0 0 0 20px;
     line-height: 20px;
+    word-break: break-all;
 }
 
 treecontrol li.tree-expanded i.tree-leaf-head, treecontrol li.tree-collapsed i.tree-leaf-head {display:none;}
